--- a/index.html
+++ b/index.html
@@ -2,10 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/Afguv5Nv">
-  <title>Redirecting to Discord</title>
+  <title>Join the ChillingCoin Discord</title>
+  <meta http-equiv="refresh" content="2; url=https://discord.gg/Afguv5Nv">
+
+  <!-- OG Meta Tags for Social Sharing -->
+  <meta property="og:title" content="Join the ChillingCoin Discord" />
+  <meta property="og:description" content="Connect with the CHC community. Get support, updates, and rewards." />
+  <meta property="og:image" content="https://chillingcoin.com/assets/chc-banner.jpeg" />
+  <meta property="og:url" content="https://discord.chillingcoin.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Mobile responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Optional Favicon -->
+  <link rel="icon" href="https://chillingcoin.com/assets/favicon.ico" type="image/x-icon" />
+
+  <!-- Styling -->
+  <style>
+    body {
+      background-color: #1e1f22;
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      flex-direction: column;
+      text-align: center;
+    }
+    img {
+      width: 100px;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 1.8em;
+      margin: 0 0 10px;
+    }
+    p {
+      color: #ccc;
+      font-size: 1em;
+    }
+    a {
+      color: #7289DA;
+    }
+  </style>
 </head>
 <body>
-  <p>Redirecting to our Discord community...</p>
+  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord Logo" />
+  <h1>Redirecting to the ChillingCoin Discord...</h1>
+  <p>If you’re not redirected, <a href="https://discord.gg/Afguv5Nv">click here</a>.</p>
 </body>
 </html>
